New API (update endpoint with v1) + email wip
