# src/openapi/api/email-resource.serviceInterface.ts
@@ -1,0 +1,34 @@
+/**
+ * slab-seller-backend API
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0.0-SNAPSHOT
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+import { HttpHeaders }                                       from '@angular/common/http';
+
+import { Observable }                                        from 'rxjs';
+
+import { PasswordRecoveryRequestDTO } from '../model/models';
+
+
+import { Configuration }                                     from '../configuration';
+
+
+
+export interface EmailResourceServiceInterface {
+    defaultHeaders: HttpHeaders;
+    configuration: Configuration;
+
+    /**
+     * 
+     * 
+     * @param passwordRecoveryRequestDTO 
+     */
+    apiV1EmailSendPost(passwordRecoveryRequestDTO?: PasswordRecoveryRequestDTO, extraHttpRequestParams?: any): Observable<{}>;
+
+}
