# src/openapi/model/password-recovery-request-dto.ts
@@ -1,0 +1,17 @@
+/**
+ * slab-seller-backend API
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0.0-SNAPSHOT
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+export interface PasswordRecoveryRequestDTO { 
+    email?: string;
+}
+
